--- a/ej8.html
+++ b/ej8.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ejercicio 4</title>
+    <title>Document</title>
 </head>
 <body>
-
-    <button onclick="BOTON()">Haga click</button>
     <script>
-        function BOTON() {
-        alert('has pulsado un boton')
-        }
+
+    
+        var numero = prompt("¿Que edad tienes?");
+       
     </script>
 </body>
 </html>
