--- a/ej17.html
+++ b/ej17.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ejercicio 4</title>
+    <title>Ejercicio 17</title>
+    <script>
+        
+        (alert(Math.round(Math.random()*100 + 1)));
+    </script>
 </head>
 <body>
-
-    <button onclick="BOTON()">Haga click</button>
-    <script>
-        function BOTON() {
-        alert('has pulsado un boton')
-        }
-    </script>
+    
 </body>
 </html>
