--- a/ej19.html
+++ b/ej19.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ejercicio 4</title>
+    <title>Ejercicio 19</title>
+    <script>
+        var palabra = prompt('Escribe una palabra en minusculas: ');
+        palabra = palabra.toUpperCase();
+        alert(palabra);
+    </script>
 </head>
 <body>
-
-    <button onclick="BOTON()">Haga click</button>
-    <script>
-        function BOTON() {
-        alert('has pulsado un boton')
-        }
-    </script>
+    
 </body>
 </html>
