--- a/ej20.html
+++ b/ej20.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ejercicio 4</title>
+    <title>Ejercicio 20</title>
+    <script>
+        var invertirPalabra = palabra => Palabra.split("").reverse().join("");
+ 
+        let Palabra = prompt('Escribe una palabra: ');
+        alert(invertirPalabra(Palabra));
+    </script>
 </head>
 <body>
-
-    <button onclick="BOTON()">Haga click</button>
-    <script>
-        function BOTON() {
-        alert('has pulsado un boton')
-        }
-    </script>
+    
 </body>
 </html>
